# irtxt

./: .gitignore  CMakeLists.txt
include/: editor.h  file_io.h  text_buffer.h
src/: main.cpp
src/ted_buffer/: gap_buffer.cpp
src/ted_utils/: editor.cpp  file_io.cpp
tests/: buffer_test_gap.cpp  ed_utils_test.cpp  file_io_test.cpp  io_test.cpp
